# ChangeLog for dev-libs/icu
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.197 2012/06/05 20:57:37 jer Exp $

  05 Jun 2012; Jeroen Roovers <jer@gentoo.org> icu-49.1.1-r1.ebuild:
  Stable for HPPA (bug #394201).

  03 Jun 2012; Raúl Porcel <armin76@gentoo.org> icu-49.1.1-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #418193

  29 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> icu-49.1.1-r1.ebuild:
  ppc stable, bug #394201

  26 May 2012; Markus Meier <maekke@gentoo.org> icu-49.1.1-r1.ebuild:
  arm stable, bug #394201

  19 May 2012; Agostino Sarubbo <ago@gentoo.org> icu-49.1.1-r1.ebuild:
  Stable for amd64, wrt bug #394201

  12 May 2012; Tobias Klausmann <klausman@gentoo.org> icu-49.1.1-r1.ebuild:
  Stable on alpha, bug #394201

  10 May 2012; Mike Gilbert <floppym@gentoo.org> files/icu-49.1.1-bsd.patch,
  files/icu-49.1.1-regex.patch:
  icu-49.1.1-bsd.patch: Use patch from upstream. icu-49.1.1-regex.patch: Update
  URLs. Patch by Arfrever.

  10 May 2012; Brent Baude <ranger@gentoo.org> icu-49.1.1-r1.ebuild:
  Marking icu-49.1.1-r1 ppc64 for bug 394201

  09 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> icu-49.1.1-r1.ebuild:
  x86 stable wrt security bug #394201

  09 May 2012; Alexis Ballier <aballier@gentoo.org> icu-49.1.1-r1.ebuild:
  keyword ~amd64-fbsd

  09 May 2012; Alexis Ballier <aballier@gentoo.org> icu-49.1.1-r1.ebuild,
  +files/icu-49.1.1-bsd.patch:
  Fix build of icu 49 on FreeBSD.

  06 May 2012; Mike Gilbert <floppym@gentoo.org> -files/icu-4.6-pkgdata.patch,
  -files/icu-4.6.1-parallel_installation.patch, -files/icu-4.8.1-fix_ltr.patch:
  Remove old patches per Arfrever.

  06 May 2012; Mike Gilbert <floppym@gentoo.org> -icu-4.6.ebuild:
  Remove one more old version.

  06 May 2012; Mike Gilbert <floppym@gentoo.org> -icu-4.8.1-r2.ebuild,
  -icu-4.8.1-r3.ebuild, -icu-49.1.1.ebuild, -icu-49.1.ebuild:
  Remove old versions. Requested by Arfrever.
