@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libcgroup
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libcgroup/ChangeLog,v 1.2 2011/05/14 18:11:14 nerdboy Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libcgroup/ChangeLog,v 1.3 2012/06/06 03:30:43 zmedico Exp $
+
+  06 Jun 2012; Zac Medico <zmedico@gentoo.org> libcgroup-0.37-r2.ebuild:
+  inherit eutils for epatch
 
 *libcgroup-0.37-r2 (14 May 2011)
 
