@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.197 2012/06/05 20:57:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.198 2012/06/06 03:29:24 zmedico Exp $
+
+  06 Jun 2012; Zac Medico <zmedico@gentoo.org> icu-4.8.1.1-r1.ebuild:
+  inherit eutils for epatch
 
   05 Jun 2012; Jeroen Roovers <jer@gentoo.org> icu-49.1.1-r1.ebuild:
   Stable for HPPA (bug #394201).
